[gd_scene load_steps=6 format=3 uid="uid://cbdepwyyjqlcm"]

[ext_resource type="Script" uid="uid://ckvpajwmrsvb3" path="res://menu_ui/main.gd" id="1_t7737"]
[ext_resource type="Theme" uid="uid://dy58d31fw2wn8" path="res://themes/text_normal.tres" id="2_y2pfb"]
[ext_resource type="AudioStream" uid="uid://cuebf5ffmk1af" path="res://assets/music/Mixkit/mixkit-cool-interface-click-tone-2568.wav" id="4_jh0yp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03q7c"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jh0yp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7737")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -118.0
offset_right = 246.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_y2pfb")
theme_override_font_sizes/font_size = 125
text = "iJump"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_y2pfb")
theme_override_colors/font_hover_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_colors/font_color = Color(0.570099, 0.733922, 1, 1)
theme_override_constants/outline_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/disabled = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/hover = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_03q7c")
theme_override_styles/normal = SubResource("StyleBoxFlat_03q7c")
text = "Play"
icon_alignment = 1

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_y2pfb")
theme_override_colors/font_hover_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_colors/font_color = Color(1, 0.385954, 0.415808, 1)
theme_override_constants/outline_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/hover = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jh0yp")
theme_override_styles/normal = SubResource("StyleBoxFlat_jh0yp")
text = "QUIT"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 247.0
grow_vertical = 0
theme = ExtResource("2_y2pfb")
theme_override_font_sizes/font_size = 35
text = "version 0.1"
horizontal_alignment = 1

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jh0yp")

[connection signal="focus_entered" from="Control/VBoxContainer/Button1" to="." method="_on_button1_focus_entered"]
[connection signal="focus_exited" from="Control/VBoxContainer/Button1" to="." method="_on_button1_focus_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="focus_entered" from="Control/VBoxContainer/Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="focus_exited" from="Control/VBoxContainer/Button2" to="." method="_on_button_2_focus_exited"]
[connection signal="pressed" from="Control/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
